--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
 			new Date().getUTCFullYear()
 		}
 	</p>
-	<div class="flex gap-x-4 md:col-span-2 md:justify-self-end">
+	<div class="flex gap-x-4 md:col-span-2 md:gap-x-0 md:justify-self-end">
 		<a
 			href="https://www.linkedin.com/in/samantha-albrecht-%F0%9F%91%A9%E2%80%8D%F0%9F%92%BB-998053156/"
 			title="Go to LinkedIn"
