add navbar and project components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,34 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import LargeContainer from "../components/foundation/LargeContainer.astro";
+import SectionContainer from "../components/foundation/SectionContainer.astro";
+import Projects from "../components/Projects.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
+	<main class="grid">
+		<SectionContainer>
+			<LargeContainer>
+				<h1
+					class="pb-8 pt-10 text-3xl font-medium leading-normal md:pb-10 md:pt-14 md:text-5xl md:leading-normal lg:pb-12 lg:pt-20 lg:text-6xl lg:leading-normal"
+				>
+					Solving complex problems with intuitive design solutions
+				</h1>
+			</LargeContainer>
+		</SectionContainer>
+		<SectionContainer>
+			<Projects />
+		</SectionContainer>
+
+		<SectionContainer bgColor="bg-emerald-500">
+			<section>Process</section>
+			<section>About</section>
+			<section>Experience</section>
+			<section>Books</section>
+		</SectionContainer>
+
+		<!-- <ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
 				title="Documentation"
@@ -31,51 +49,6 @@ import Card from '../components/Card.astro';
 				title="Community"
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
-		</ul>
+		</ul> -->
 	</main>
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
