add process component

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -48,7 +48,7 @@ interface Item {
 <LargeContainer>
 	<a
 		href=""
-		class="grid gap-y-8 before:absolute before:-inset-x-4 before:-top-4 before:bottom-0 before:z-0 before:p-4 before:transition before:duration-500 before:ease-in-out hover:before:bg-gray-100"
+		class="grid gap-y-8 before:absolute before:-inset-x-4 before:-top-4 before:bottom-0 before:z-0 before:border before:border-solid before:border-transparent before:p-4 before:transition before:duration-300 before:ease-in-out hover:before:border-black"
 	>
 		<Picture
 			class="ease relative mx-auto w-full rounded-md"
