--- a/src/components/blocks/Footer.astro
+++ b/src/components/blocks/Footer.astro
@@ -16,13 +16,13 @@ const footerLinks = [
 <footer
 	class="grid gap-y-4 border-t border-solid border-black bg-white px-4 py-4 text-xs md:grid-cols-12 md:py-0 lg:px-8 lg:text-sm"
 >
-	<p class="md:col-span-10 md:py-3 lg:py-4">
+	<p class="text-center md:col-span-10 md:py-3 lg:py-4">
 		Designed &amp; built by Samantha Albrecht &bull; Copyright &#169; {
 			new Date().getUTCFullYear()
 		}
 	</p>
 	<ul
-		class="flex gap-x-4 md:col-span-2 md:gap-x-0 md:justify-self-end"
+		class="flex justify-center gap-x-4 md:col-span-2 md:gap-x-0 md:justify-self-end"
 		role="navigation"
 	>
 		{
