--- a/src/components/blocks/Navbar.astro
+++ b/src/components/blocks/Navbar.astro
@@ -29,7 +29,7 @@ const navLinks = [
 ---
 
 <nav
-	class="fixed bottom-0 left-0 right-0 z-10 grid border-t border-solid border-black bg-white px-4 py-4 text-sm before:absolute before:-top-1 before:block before:h-1 before:w-full before:bg-fuchsia-500 md:sticky md:bottom-auto md:top-1 md:grid-cols-12 md:border-b md:border-t-0 md:py-0 lg:px-8"
+	class="relative grid border-t border-solid border-black bg-white px-4 py-4 text-sm before:absolute before:-top-1 before:block before:h-1 before:w-full before:bg-fuchsia-500 md:grid-cols-12 md:border-b md:border-t-0 md:py-0 lg:px-8"
 >
 	<a
 		href="/"
