add about component

--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -3,7 +3,7 @@ import LargeContainer from "./foundation/LargeContainer.astro";
 import SmallContainer from "./foundation/SmallContainer.astro";
 
 const h3 = "text-xl font-medium";
-const p = "mb-4 border-b border-solid border-gray-300 pb-4";
+const p = "mb-4 border-b border-solid border-gray-300 pb-4 leading-relaxed";
 const ul = "flex flex-wrap gap-x-2 text-sm";
 const li =
 	"flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-gray-700 text-gray-500";
