add books component

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -13,7 +13,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 		</h2>
 	</div>
 	<Picture
-		class="ease relative mx-auto w-full rounded-md pb-16 pt-4"
+		class="mx-auto w-full rounded-md pb-16 pt-8"
 		src={localImage}
 		widths={[200, 400, 800]}
 		sizes="(max-width: 800px) 100vw, 800px"
