--- a/src/components/blocks/Navbar.astro
+++ b/src/components/blocks/Navbar.astro
@@ -8,17 +8,17 @@ const navLinks = [
 	{
 		name: "Process",
 		href: "/",
-		title: "See all projects",
+		title: "Learn more about my process",
 	},
 	{
 		name: "About",
 		href: "/",
-		title: "See all projects",
+		title: "Learn more about me",
 	},
 	{
 		name: "Experience",
 		href: "/",
-		title: "See all projects",
+		title: "Learn more about my experience",
 	},
 	// {
 	// 	name: "Contact",
