--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 import Projects from "../components/Projects.astro";
 import Process from "../components/Process.astro";
 import About from "../components/About.astro";
+import Books from "../components/Books.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -56,7 +57,9 @@ import About from "../components/About.astro";
 			</div>
 		</SectionContainer>
 		<SectionContainer>
-			<section>Books</section>
+			<div class="py-24">
+				<Books />
+			</div>
 		</SectionContainer>
 		<SectionContainer bgColor="bg-black">
 			<LargeContainer>
