--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Projects from "../components/Projects.astro";
 import Process from "../components/Process.astro";
 import About from "../components/About.astro";
 import Books from "../components/Books.astro";
+import Experience from "../components/Experience.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -53,7 +54,7 @@ import Books from "../components/Books.astro";
 
 		<SectionContainer bgColor="bg-gray-100">
 			<div class="py-24">
-				<section>Experience</section>
+				<Experience />
 			</div>
 		</SectionContainer>
 		<SectionContainer>
