--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 <LargeContainer>
 	<div class="grid gap-y-16">
 		<div class="grid gap-y-1">
-			<div class="font-mono-space leading-normal">Experience</div>
+			<div class="font-mono-space leading-normal text-gray-600">Experience</div>
 			<h2 class="text-4xl font-medium leading-normal">Where I've worked</h2>
 		</div>
 		<SmallContainer>
@@ -25,13 +25,13 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 								style={{ fill: "#d4765d" }}></path>
 						</svg>
 						<h3 class="text-xl font-medium">CoSchedule</h3>
-						<p class="text-sm text-gray-500">4+ years</p>
+						<p class="text-sm text-gray-600">4+ years</p>
 					</div>
 					<ul class="grid gap-y-8">
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
 							<div>
 								<h4 class="font-medium leading-normal">Product Designer</h4>
-								<p class="text-xs leading-normal text-gray-500">
+								<p class="text-xs leading-normal text-gray-600">
 									April 2022 &bull; Present
 								</p>
 							</div>
@@ -43,7 +43,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
 							<div>
 								<h4 class="font-medium leading-normal">Web Designer</h4>
-								<p class="text-xs leading-normal text-gray-500">
+								<p class="text-xs leading-normal text-gray-600">
 									April 2021 &bull; April 2022
 								</p>
 							</div>
@@ -55,7 +55,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
 							<div>
 								<h4 class="font-medium leading-normal">Jr Web Designer</h4>
-								<p class="text-xs leading-normal text-gray-500">
+								<p class="text-xs leading-normal text-gray-600">
 									April 2020 &bull; April 2021
 								</p>
 							</div>
@@ -69,7 +69,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 								<h4 class="font-medium leading-normal">
 									Graphic Design Intern
 								</h4>
-								<p class="text-xs leading-normal text-gray-500">
+								<p class="text-xs leading-normal text-gray-600">
 									April 2019 &bull; April 2020
 								</p>
 							</div>
@@ -101,13 +101,13 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 								style={{ fill: "#53a8dd" }}></path>
 						</svg>
 						<h3 class="text-xl font-medium">Dynamic Communities</h3>
-						<p class="text-sm text-gray-500">1 year 2 months</p>
+						<p class="text-sm text-gray-600">1 year 2 months</p>
 					</div>
 					<ul class="grid gap-y-8">
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
 							<div>
 								<h4 class="font-medium leading-normal">Marketing Intern</h4>
-								<p class="text-xs leading-normal text-gray-500">
+								<p class="text-xs leading-normal text-gray-600">
 									January 2018 &bull; March 2019
 								</p>
 							</div>
