--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ import Experience from "../components/Experience.astro";
 			<LargeContainer>
 				<h1
 					class="pb-8 pt-10 text-3xl font-medium leading-normal md:pb-10 md:pt-14 md:text-5xl md:leading-normal lg:pb-12 lg:pt-20 lg:text-6xl lg:leading-normal"
+					id="projects"
 				>
 					Solving complex problems with intuitive design solutions
 				</h1>
@@ -25,11 +26,11 @@ import Experience from "../components/Experience.astro";
 			<Projects />
 		</SectionContainer>
 		<SectionContainer bgColor="bg-gray-100">
-			<div class="py-24">
+			<div class="py-24" id="process">
 				<Process />
 			</div>
 		</SectionContainer>
-		<SectionContainer bgColor="bg-black">
+		<SectionContainer bgColor="bg-gray-900">
 			<LargeContainer>
 				<figure class="grid gap-y-4 py-16 text-white">
 					<blockquote>
@@ -47,13 +48,13 @@ import Experience from "../components/Experience.astro";
 		</SectionContainer>
 
 		<SectionContainer>
-			<div class="py-24">
+			<div class="py-24" id="about">
 				<About />
 			</div>
 		</SectionContainer>
 
 		<SectionContainer bgColor="bg-gray-100">
-			<div class="py-24">
+			<div class="py-24" id="experience">
 				<Experience />
 			</div>
 		</SectionContainer>
@@ -62,7 +63,7 @@ import Experience from "../components/Experience.astro";
 				<Books />
 			</div>
 		</SectionContainer>
-		<SectionContainer bgColor="bg-black">
+		<SectionContainer bgColor="bg-gray-900">
 			<LargeContainer>
 				<figure class="grid gap-y-4 py-16 text-white">
 					<blockquote>
