--- a/src/components/Books.astro
+++ b/src/components/Books.astro
@@ -63,7 +63,7 @@ const books = [
 <LargeContainer>
 	<div class="grid gap-y-8">
 		<div class="grid gap-y-1">
-			<div class="font-mono-space leading-normal">Books</div>
+			<div class="font-mono-space leading-normal text-gray-600">Books</div>
 			<h2 class="text-4xl font-medium leading-normal">
 				Books I've read & recommend
 			</h2>
