--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,10 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="bg-fuchsia-500 font-sans-serif leading-normal">
+<html
+	lang="en"
+	class="bg-waikawa-gray-500 font-sans-serif leading-normal text-gray-950"
+>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
