add experience content

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -13,7 +13,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 			<div class="grid gap-y-16">
 				<div>
 					<div
-						class="mb-6 grid items-center gap-x-3 border-b border-solid border-gray-300 pb-2 md:grid-cols-[auto_1fr_auto]"
+						class="mb-8 grid items-center gap-x-3 border-b border-solid border-gray-300 pb-2 md:grid-cols-[auto_1fr_auto]"
 					>
 						<svg
 							class="w-12"
@@ -27,62 +27,108 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 						<h3 class="text-xl font-medium">CoSchedule</h3>
 						<p class="text-sm text-gray-600">4+ years</p>
 					</div>
-					<ul class="grid gap-y-8">
+					<ul class="grid gap-y-10">
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
-							<div>
-								<h4 class="font-medium leading-normal">Product Designer</h4>
-								<p class="text-xs leading-normal text-gray-600">
+							<div
+								class="grid grid-cols-2 items-baseline md:grid-cols-1 md:content-start"
+							>
+								<h4 class="font-medium leading-loose">Product Designer</h4>
+								<p
+									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+								>
 									April 2022 &bull; Present
 								</p>
 							</div>
-							<ul class="list-disc pl-5">
-								<li class="text-sm">bullet 1</li>
-								<li class="text-sm">bullet 2</li>
-							</ul>
+							<div class="grid gap-y-4">
+								<p class="text-sm leading-loose">
+									Understand user behavior to drive the design & development of
+									successful product features that effectively meet both user
+									and business needs.
+								</p>
+								<p class="text-sm leading-loose">
+									One of my most notable accomplishments in this role was
+									launching a highly adopted AI integration.
+								</p>
+							</div>
 						</li>
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
-							<div>
-								<h4 class="font-medium leading-normal">Web Designer</h4>
-								<p class="text-xs leading-normal text-gray-600">
+							<div
+								class="grid grid-cols-2 items-baseline md:grid-cols-1 md:content-start"
+							>
+								<h4 class="font-medium leading-loose">Web Designer</h4>
+								<p
+									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+								>
 									April 2021 &bull; April 2022
 								</p>
 							</div>
-							<ul class="list-disc pl-5">
-								<li class="text-sm">bullet 1</li>
-								<li class="text-sm">bullet 2</li>
-							</ul>
+							<div class="grid gap-y-4">
+								<p class="text-sm leading-loose">
+									Identify conversion rate optimization (CRO) opportunities, and
+									designed & developed highly performant, accessible web pages
+									that followed semantic HTML guidelines.
+								</p>
+								<p class="text-sm leading-loose">
+									One of my most notable accomplishments in this role was
+									reaching all-time high organic traffic to the website by
+									improving website performance and implementing a new search
+									engine optimization (SEO) strategy.
+								</p>
+							</div>
 						</li>
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
-							<div>
-								<h4 class="font-medium leading-normal">Jr Web Designer</h4>
-								<p class="text-xs leading-normal text-gray-600">
+							<div
+								class="grid grid-cols-2 items-baseline md:grid-cols-1 md:content-start"
+							>
+								<h4 class="font-medium leading-loose">Jr Web Designer</h4>
+								<p
+									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+								>
 									April 2020 &bull; April 2021
 								</p>
 							</div>
-							<ul class="list-disc pl-5">
-								<li class="text-sm">bullet 1</li>
-								<li class="text-sm">bullet 2</li>
-							</ul>
+							<div class="grid gap-y-4">
+								<p class="text-sm leading-loose">
+									Designed and develop visually compelling and user-friendly web
+									pages that adhered to established design standards and best
+									practices to ensure consistency and quality.
+								</p>
+								<p class="text-sm leading-loose">
+									One of my most notable accomplishments in this role was
+									launching a new product signup experience that achieved the
+									highest conversion rates, effectively driving business growth.
+								</p>
+							</div>
 						</li>
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
-							<div>
-								<h4 class="font-medium leading-normal">
-									Graphic Design Intern
-								</h4>
-								<p class="text-xs leading-normal text-gray-600">
+							<div
+								class="grid grid-cols-2 items-baseline md:grid-cols-1 md:content-start"
+							>
+								<h4 class="font-medium leading-loose">Graphic Design Intern</h4>
+								<p
+									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+								>
 									April 2019 &bull; April 2020
 								</p>
 							</div>
-							<ul class="list-disc pl-5">
-								<li class="text-sm">bullet 1</li>
-								<li class="text-sm">bullet 2</li>
-							</ul>
+							<div class="grid gap-y-4">
+								<p class="text-sm leading-loose">
+									Created custom icons, illustrations, and infographics that
+									were utilized across multiple channels, including the blog,
+									social media, and website content.
+								</p>
+								<p class="text-sm leading-loose">
+									One of my most notable accomplishments in this role was
+									developing product guides to facilitate user onboarding and
+									adoption, contributing to the overall success of the product.
+								</p>
+							</div>
 						</li>
 					</ul>
 				</div>
 				<div>
 					<div
-						class="mb-6 grid items-center gap-x-3 border-b border-solid border-gray-300 pb-2 md:grid-cols-[auto_1fr_auto]"
+						class="mb-8 grid items-center gap-x-3 border-b border-solid border-gray-300 pb-2 md:grid-cols-[auto_1fr_auto]"
 					>
 						<svg
 							class="w-12"
@@ -103,18 +149,30 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 						<h3 class="text-xl font-medium">Dynamic Communities</h3>
 						<p class="text-sm text-gray-600">1 year 2 months</p>
 					</div>
-					<ul class="grid gap-y-8">
+					<ul class="grid gap-y-10">
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
-							<div>
-								<h4 class="font-medium leading-normal">Marketing Intern</h4>
-								<p class="text-xs leading-normal text-gray-600">
+							<div
+								class="grid grid-cols-2 items-baseline md:grid-cols-1 md:content-start"
+							>
+								<h4 class="font-medium leading-loose">Marketing Intern</h4>
+								<p
+									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+								>
 									January 2018 &bull; March 2019
 								</p>
 							</div>
-							<ul class="list-disc pl-5">
-								<li class="text-sm">bullet 1</li>
-								<li class="text-sm">bullet 2</li>
-							</ul>
+							<div class="grid gap-y-4">
+								<p class="text-sm leading-loose">
+									Built and executed tactical marketing plans to promote
+									multiple Microsoft Dynamics events with 100-300 attendees in
+									Europe, South Africa, and the US.
+								</p>
+								<p class="text-sm leading-loose">
+									One of my most notable accomplishments in this role was
+									redesigning an underperforming website, resulting in a
+									significant improvement in user experience.
+								</p>
+							</div>
 						</li>
 					</ul>
 				</div>
