add mychart page

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,4 @@
 ---
-import { Picture } from "@astrojs/image/components";
 import LargeContainer from "./foundation/LargeContainer.astro";
 import headshot from "../assets/images/about/headshot-light.jpg?url";
 import SmallContainer from "./foundation/SmallContainer.astro";
@@ -9,7 +8,8 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 	<div class="grid gap-y-1">
 		<div class="font-mono-space leading-normal text-gray-600">About</div>
 		<h2 class="text-4xl font-medium leading-normal">
-			Designer-who-knows-how-to-code
+			<!-- What drives great product design -->
+			My design philosophy
 		</h2>
 	</div>
 	<img
@@ -20,22 +20,27 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 	<SmallContainer>
 		<div class="grid gap-y-4">
 			<p class="leading-loose">
-				I'm Samantha, a product designer and developer with over three years of
-				experience shipping work for a growing SaaS startup. I’m responsible for
-				creating and building web experiences that drive customer growth and
-				expand company awareness. My focus has been on conversion design, web
-				performance, and search engine optimization from a development
-				standpoint.
+				Hi! I'm Samantha, a product designer and developer with over three years
+				of experience shipping work for a growing SaaS startup.
 			</p>
 			<p class="leading-loose">
-				Working for a small, scrappy SaaS startup I'm involved with the
-				end-to-end web development process from ideation to launch. As a
-				designer-who-knows-how-to-code, I have keen eye for layout & design in
-				addition to a knack for solving technical code challenges.
+				As a product designer, I believe that two key traits are critical to
+				success: curiosity and resilience. My curiosity drives me to ask
+				questions, seek new knowledge, and explore possibilities. It fuels me to
+				uncover user needs and find innovative design solutions to complex
+				problems.
 			</p>
 			<p class="leading-loose">
-				My current interest is in strengthening my product design chops and
-				being proficient in JavaScript and React.
+				Resilience is crucial in the face of obstacles and setbacks. Product
+				design is a dynamic field, and challenges are a natural part of the
+				process. Resilience allows me to persevere in the face of adversity and
+				keep pushing forward towards a solution.
+			</p>
+			<p class="leading-loose">
+				Together, curiosity and resilience create a powerful combination that
+				helps me navigate the ever-changing landscape of product design. By
+				continuously learning, experimenting, and adapting, I strive to create
+				products that meet the needs of users and drive business success.
 			</p>
 		</div>
 	</SmallContainer>
