--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -46,8 +46,9 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 									and business needs.
 								</p>
 								<p class="text-sm leading-loose">
-									One of my most notable accomplishments in this role was
-									launching a highly adopted AI integration.
+									<span class="font-medium">Notable win:</span> launching Headline
+									AI, a highly adopted feature designed to help users generate headline
+									ideas using AI.
 								</p>
 							</div>
 						</li>
@@ -69,10 +70,10 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 									that followed semantic HTML guidelines.
 								</p>
 								<p class="text-sm leading-loose">
-									One of my most notable accomplishments in this role was
-									reaching all-time high organic traffic to the website by
-									improving website performance and implementing a new search
-									engine optimization (SEO) strategy.
+									<span class="font-medium">Notable win:</span> reaching all-time
+									high organic traffic rates to the website by improving website
+									performance and implementing a new search engine optimization (SEO)
+									strategy.
 								</p>
 							</div>
 						</li>
@@ -94,9 +95,9 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 									practices to ensure consistency and quality.
 								</p>
 								<p class="text-sm leading-loose">
-									One of my most notable accomplishments in this role was
-									launching a new product signup experience that achieved the
-									highest conversion rates, effectively driving business growth.
+									<span class="font-medium">Notable win:</span> launching a new product
+									signup experience that achieved the highest conversion rates, effectively
+									driving business growth.
 								</p>
 							</div>
 						</li>
@@ -118,9 +119,9 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 									social media, and website content.
 								</p>
 								<p class="text-sm leading-loose">
-									One of my most notable accomplishments in this role was
-									developing product guides to facilitate user onboarding and
-									adoption, contributing to the overall success of the product.
+									<span class="font-medium">Notable win:</span> developing product
+									guides to facilitate user onboarding and adoption, contributing
+									to the overall success of the product.
 								</p>
 							</div>
 						</li>
@@ -168,9 +169,8 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 									Europe, South Africa, and the US.
 								</p>
 								<p class="text-sm leading-loose">
-									One of my most notable accomplishments in this role was
-									redesigning an underperforming website, resulting in a
-									significant improvement in user experience.
+									<span class="font-medium">Notable win:</span> redesigning an underperforming
+									website, resulting in a significant improvement in user experience.
 								</p>
 							</div>
 						</li>
