--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,12 +10,12 @@ import Books from "../components/Books.astro";
 import Experience from "../components/Experience.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Samantha Albrecht">
 	<main class="grid">
 		<SectionContainer>
 			<LargeContainer>
 				<h1
-					class="pb-8 pt-10 text-3xl font-medium leading-normal md:pb-10 md:pt-14 md:text-5xl md:leading-normal lg:pb-12 lg:pt-20 lg:text-6xl lg:leading-normal"
+					class="pb-10 pt-8 text-3xl font-medium leading-normal md:pb-10 md:pt-14 md:text-5xl md:leading-normal lg:pb-12 lg:pt-20 lg:text-6xl lg:leading-normal"
 					id="projects"
 				>
 					Solving complex problems with intuitive design solutions
